--- a/src/sass/_index.scss
+++ b/src/sass/_index.scss
@@ -10,11 +10,16 @@ body {
     align-items: center;
     width: 100%;
     margin: 0;
+    @media (max-width: 768px) {
+      margin: 0;
+    }
+    
   }
 
   #root {
     width: 100%;
     max-width: 1400px;
+    margin: 0;
   }
   
   code {
