--- a/src/sass/_fiche-logement.scss
+++ b/src/sass/_fiche-logement.scss
@@ -5,6 +5,7 @@
   background-color: #ffffff;
   width: 100%;
   max-width: 1400px;
+  margin: 0;
 
   .fiche-logement__content {
     flex: 1;
@@ -61,6 +62,7 @@
     max-width: 1400px;
     width: 100%;
     flex-direction: column;
+    justify-content: center;
 
     .infos {
       display: flex;
@@ -84,17 +86,20 @@
     }
 
     .collapse-logement {
+      width: 100%;
       display: flex;
       flex-direction: row;
       justify-content: space-between;
-      gap: 20px;
+      gap: 40px;
+      margin: 0;
+    
 
       .description {
-        width: 582px;
+        width: 100%;
       }
 
       .equipments {
-        width: 582px;
+        width: 100%;
 
         ul {
           list-style: none;
@@ -104,18 +109,24 @@
   }
 
   @media (max-width: 768px) {
+   
+    
     .gallery {
       height: 255px;
+      margin-top: 30px;
 
       .gallery__img {
-        border-radius: 5px;
+        border-radius: 2px;
       }
     }
 
     .logement-info {
+      width: 100vw;
       display: flex;
       flex-direction: column;
-      margin-top: 0;
+      margin: 0;
+      padding: 0 20px;
+      justify-content: center;
 
       .infos {
         flex-direction: column;
@@ -127,18 +138,37 @@
         }
 
         .rightcolumn {
+          display: flex;
           margin: 0;
-          width: 100%;
+          width: 100vw;
           flex-direction: row-reverse;
           align-items: center;
           justify-content: space-between;
+          .host-info {
+            margin-right: 50px;
+          }
         }
       }
 
+
       .collapse-logement {
+        display: flex;
+        width: 100vw;
         flex-direction: column;
         gap: 0;
-        margin-bottom: 20px;
+        margin-bottom: 0;
+        padding: 0;
+        width: 100px;
+        justify-content: center;
+        min-width: 100%;
+        .description {
+          width: 100vw;
+          margin: 0;
+        }
+        .equipments {
+          width: 100vw;
+          margin: 0;
+        }
       }
     }
   }
