--- a/src/sass/_gallery.scss
+++ b/src/sass/_gallery.scss
@@ -69,11 +69,12 @@
 @media (max-width: 768px) {
     .gallery {
         margin: 0;
-        padding: 0;
+        padding: 0 20px;
         height: 255px;
+        border-radius: 2px;
         &__image-container img {
             height: 255px;
-            border-radius: 5px;
+            border-radius: 2px;
         }
         &__button {
             img {
