--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -34,7 +34,7 @@
         display: flex;
         justify-content: space-between;
         align-items: center;
-        padding: 0 20px;
+        padding: 20px;
         height: auto;
         max-width: 768px;
         width: 100%;
