--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -6,7 +6,8 @@
     align-items: center;       
     justify-content: space-between;              
     background-color: #ffffff;
-    margin: 0 auto; 
+    margin: 50px;
+
 
     
     .header-logo {
@@ -38,6 +39,7 @@
         height: auto;
         max-width: 768px;
         width: 100%;
+        margin: 20px;
 
         .header-logo {
             width: 145px; 
