--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -16,13 +16,19 @@
 
     .header-nav {
         display: flex;
-        gap: 30px; 
+        gap: 50px; 
         
         .nav-link {
-            color: #333;
+            color: #000000;
             font-weight: bold;
             height: 34px;
             text-decoration: none;
+            font-family: Montserrat;
+            font-size: 24px;
+            font-weight: 500;
+            line-height: 34.22px;
+            text-align: right;
+
             &.active {
                text-decoration: underline;
             }
